// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button compoenent should add the class passed to props to the class list 1`] = `
<div>
  <h1
    class="title myCustomClass"
  >
    My title
  </h1>
</div>
`;

exports[`Button compoenent should have the black shade color by default 1`] = `
<div>
  <h1
    class="title undefined"
  >
    My title
  </h1>
</div>
`;

exports[`Button compoenent should have the white color when changing the color prop to white 1`] = `
<div>
  <h1
    class="title white undefined"
  >
    My title
  </h1>
</div>
`;
